Add shared I/O thread pool for parallel HTTP operations and configurable timeout for Cloudbeds API requests